--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"type": "Manifest",
 	"label": {
 		"en": [
-			"test manifest - simple paged"
+			"test manifest - default behavior"
 		]
 	},
 	"items": [		{
