--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,21 @@
 	"type": "Manifest",
 	"label": {
 		"en": [
-			"test manifest - reduced"
+			"test manifest - simple paged"
 		]
 	},
+	"behavior": [
+		"paged"
+	],
 	"items": [
 		{
 			"id": "https://iiif.io/api/cookbook/recipe/0009-book-1//canvas/p1",
 			"type": "Canvas",
+			"label": {
+				"en": [
+					"Blank page"
+				]
+			},
 			"height": 4613,
 			"width": 3204,
 			"items": [
@@ -45,6 +53,11 @@
 		{
 			"id": "https://iiif.io/api/cookbook/recipe/0009-book-1//canvas/p2",
 			"type": "Canvas",
+			"label": {
+				"en": [
+					"Frontispiece"
+				]
+			},
 			"height": 4612,
 			"width": 3186,
 			"items": [
@@ -79,6 +92,11 @@
 		{
 			"id": "https://iiif.io/api/cookbook/recipe/0009-book-1//canvas/p3",
 			"type": "Canvas",
+			"label": {
+				"en": [
+					"Title page"
+				]
+			},
 			"height": 4613,
 			"width": 3204,
 			"items": [
@@ -113,6 +131,11 @@
 		{
 			"id": "https://iiif.io/api/cookbook/recipe/0009-book-1//canvas/p4",
 			"type": "Canvas",
+			"label": {
+				"en": [
+					"Blank page"
+				]
+			},
 			"height": 4578,
 			"width": 3174,
 			"items": [
