--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
 	"id": "https://iiif.io/api/cookbook/recipe/0009-book-1//manifest.json",
 	"type": "Manifest",
 	"label": {
-		"en": [
-			"test manifest - simple paged"
+		"fr": [
+			" Donation d'un bien à Eisenach à l'abbaye d'Echternach"
 		]
 	},
 	"behavior": [
@@ -12,7 +12,7 @@
 	],
 	"items": [
 		{
-			"id": "https://iiif.io/api/cookbook/recipe/0009-book-1//canvas/p1",
+			"id": "https://raw.githubusercontent.com/joelthill/public/main/A-LXI-001-001.jpg",
 			"type": "Canvas",
 			"label": {
 				"en": [
@@ -23,67 +23,28 @@
 			"width": 7323,
 			"items": [
 				{
-					"id": "https://iiif.io/api/cookbook/recipe/0009-book-1//page/p1/1",
+					"id": "https://raw.githubusercontent.com/joelthill/public/main/A-LXI-001-001.jpg",
 					"type": "AnnotationPage",
 					"items": [
 						{
-							"id": "https://iiif.io/api/cookbook/recipe/0009-book-1//annotation/p0001-image",
+							"id": "https://raw.githubusercontent.com/joelthill/public/main/A-LXI-001-001.jpg",
 							"type": "Annotation",
 							"motivation": "painting",
 							"body": {
-								"id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f18/full/max/0/default.jpg",
+								"id": "https://raw.githubusercontent.com/joelthill/public/main/A-LXI-001-001.jpg",
 								"type": "Image",
 								"format": "image/jpeg",
 								"height": 5095,
 								"width": 7323,
 								"service": [
 									{
-										"id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f18",
+										"id": "https://raw.githubusercontent.com/joelthill/public/main/A-LXI-001-001.jpg",
 										"type": "ImageService3",
-										"profile": "level1"
+										"profile": "level0"
 									}
 								]
 							},
-							"target": "https://iiif.io/api/cookbook/recipe/0009-book-1//canvas/p1"
-						}
-					]
-				}
-			]
-		},
-		{
-			"id": "https://iiif.io/api/cookbook/recipe/0009-book-1//canvas/p4",
-			"type": "Canvas",
-			"label": {
-				"en": [
-					"Blank page"
-				]
-			},
-			"height": 5095,
-			"width": 7323,
-			"items": [
-				{
-					"id": "https://iiif.io/api/cookbook/recipe/0009-book-1//page/p4/1",
-					"type": "AnnotationPage",
-					"items": [
-						{
-							"id": "https://iiif.io/api/cookbook/recipe/0009-book-1//annotation/p0004-image",
-							"type": "Annotation",
-							"motivation": "painting",
-							"body": {
-								"id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f21/full/max/0/default.jpg",
-								"type": "Image",
-								"format": "image/jpeg",
-								"height": 5095,
-								"width": 7323,
-								"service": [
-									{
-										"id": "https://iiif.io/api/image/3.0/example/reference/59d09e6773341f28ea166e9f3c1e674f-gallica_ark_12148_bpt6k1526005v_f21",
-										"type": "ImageService3",
-										"profile": "level1"
-									}
-								]
-							},
-							"target": "https://iiif.io/api/cookbook/recipe/0009-book-1//canvas/p4"
+							"target": "https://raw.githubusercontent.com/joelthill/public/main/A-LXI-001-001.jpg"
 						}
 					]
 				}
